Frontend/src/app/components/global/navbar/navbar.component.scss
@use 'colors' as colors;

.navbar-container{
  width: 100vw;
  background: colors.$background_primary;

  box-shadow: inset 0 -1px 0 0 colors.$primary;

  height: var(--navbar-height);

  display: flex;

  .navbar-box{
    height: 100%;
    width: 100%;
    padding: 0 5rem;
    display: flex;

    justify-content: space-between;
    align-items: center;

    .navbar-logo{

      .navbar-name{
        font-size: 1.5rem;
        color: colors.$text_primary;
        text-decoration: none;
      }
    }

    ul{
      height: 100%;
      display: flex;
      justify-content: end;
      align-items: center;

      li{
        margin-left: 1.5rem;
        list-style: none;
        a{
          text-decoration: none;
          color: colors.$text_primary;
        }

        a:hover{
          color: rgba(colors.$text_primary, 0.8);
        }
      }
    }
  }
}



.profile-container{
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.profile-icon-container {
  display: flex;
  justify-content: center;
  align-items: center;

  img {
    height: calc(var(--navbar-height) - 1rem);

    border-radius: 50%;
  }
}


.profile-box{
  display: flex;
  align-items: center;

  .profile-menu-icon{
    width: 1.5rem;
    height: 1.5rem;

    display: flex;
    justify-content: center;
    align-items: center;

    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 9L12 15L18 9' stroke='%2300d5a6' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;

    rotate: 180deg;
    transition: rotate 0.3s ease;

    &.active{
      rotate: 0deg;
    }
  }
}





.profile-menu-container{
  position: absolute;
  top: calc(var(--navbar-height) + 1rem);
  right: 1rem;
  background: colors.$background_secondary;
  box-shadow: 0 0 0 1px colors.$primary;
  border-radius: 0.5rem;
  padding: 1rem;

  ul{
    display: flex;
    flex-direction: column;
  }
}

